起服务完成

--- a/exam/src/index.html
+++ b/exam/src/index.html
@@ -22,8 +22,12 @@
             </div>
 
             <div class="section">
+                <div class="top">上拉刷新<img src="./images/3.gif" alt=""></div>
+                <div class="bottom">下拉加载<img src="./images/3.gif" alt=""></div>
+                <div class="main">刷新成功</div>
                 <div class="wrapper">
                     <div class="conntainer">
+
                         <dl>
                             <dt>
                             <img src="./images/pic1.png" alt="">
