渲染页面完成

--- a/exam/src/index.html
+++ b/exam/src/index.html
@@ -28,7 +28,7 @@
                 <div class="wrapper">
                     <div class="conntainer">
 
-                        <dl>
+                        <!-- <dl>
                             <dt>
                             <img src="./images/pic1.png" alt="">
                         </dt>
@@ -36,30 +36,7 @@
                                 非航空股份的合格的房价高如果对方
                             </dd>
                         </dl>
-                        <dl>
-                            <dt>
-                            <img src="./images/pic1.png" alt="">
-                        </dt>
-                            <dd>
-                                非航空股份的合格的房价高如果对方
-                            </dd>
-                        </dl>
-                        <dl>
-                            <dt>
-                            <img src="./images/pic1.png" alt="">
-                        </dt>
-                            <dd>
-                                非航空股份的合格的房价高如果对方
-                            </dd>
-                        </dl>
-                        <dl>
-                            <dt>
-                            <img src="./images/pic1.png" alt="">
-                        </dt>
-                            <dd>
-                                非航空股份的合格的房价高如果对方
-                            </dd>
-                        </dl>
+                        -->
                     </div>
                 </div>
             </div>
@@ -67,5 +44,6 @@
         <footer></footer>
     </div>
 </body>
+<script src="./js/libs/require.js" defer sync="true" data-main="./js/page/index.js"></script>
 
 </html>
